[package]
name = "pe_loader"
version = "0.1.0"
authors = ["george <kajogo777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
bincode = "1.2.1"
chrono = "0.4"
